--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-Changelog for version 3.0.3
+Changelog for version 3.0.4
 
-- add custom status to response (Ken Lalobo)
-- deps(deps-dev): update symplify/easy-coding-standard requirement from ^11.1 || ^12.0 to ^11.1 || ^12.0 || ^13.0 (dependabot[bot])
-- Bump actions/checkout from 5 to 6 (dependabot[bot])
+- add roles (Ken Lalobo)
